...
    
    lazy var searchTextField: UITextField = {
        let textField = UITextField()
        textField.borderStyle = .roundedRect
        textField.clearButtonMode = .whileEditing
        textField.translatesAutoresizingMaskIntoConstraints = false
        textField.placeholder = "Search for shows..."
        return textField
    }()
    
    lazy var favouriteLabel: UILabel = {
        let label = UILabel()
        label.translatesAutoresizingMaskIntoConstraints = false
...
    lazy var favouritesToggle: UISwitch = {
        let toggle = UISwitch()
        toggle.isOn = false
        toggle.translatesAutoresizingMaskIntoConstraints = false
        toggle.addTarget(self, action: #selector(switchValueDidChange), for: .valueChanged)
        toggle.onTintColor = UIColor(named: "Accent")
        toggle.accessibilityLabel = "Show favourites"
        return toggle
    }()
    
    lazy var favouriteStackView: UIStackView = {
        let stack = UIStackView()
        stack.translatesAutoresizingMaskIntoConstraints = false
...
