...
    lazy var favouritesToggle: UISwitch = {
        let toggle = UISwitch()
        toggle.isOn = false
        toggle.translatesAutoresizingMaskIntoConstraints = false
        toggle.addTarget(self, action: #selector(switchValueDidChange), for: .valueChanged)
        toggle.onTintColor = UIColor(named: "Accent")
        toggle.accessibilityLabel = "Set favourite"
        return toggle
    }()
    
    lazy var favouriteLabel: UILabel = {
        let label = UILabel()
        label.translatesAutoresizingMaskIntoConstraints = false
...
